Commit preliminary version 0.00e: 1. Initial implementation of partial-word operators CFA, CFR, IFL, DFL, DLB, BFA, BFR, STA, STR, STB. 2. Implemement ADL, IBB, DBB, RTF, BOF, BRP, BSA, BCH, BCL, BCE, BCU, BCS, SOR, SOH, IOM, LDR, LDB, LBC, LSA, STP, CLA, CLR, CLB, CLL, all shifts. 3. Implement variable-length BCD adder. 4. Additional arithmetics methods for Register class. 5. Correct re-focus of ConsoleKeyboard window. 6. Allow ConsolePrinter CR/LF buttons to operate while in remote state.

--- a/webUI/B220SystemConfig.css
+++ b/webUI/B220SystemConfig.css
@@ -55,7 +55,7 @@
     position:           absolute;
     top:                68px;
     right:              200px;
-    width:              80px;
+    width:              100px;
     height:             20px}
 
 #SysConfigHeading {
